Update backend logic